--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
-		"release": "npm run build && git add . && git commit -m \"another release\" && git push && git subtree push --prefix dist origin gh-pages",
+		"release": "npm run build && git add . && git commit -m \"another release\" && git push && git subtree push --prefix build origin release",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
